samples/_failures_safe/1761195635_46738a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7280873c.c: In function ‘graph_print_distances’:
./samples/SAFE/__tmp_7280873c.c:173:9: error: expected expression at end of input
  173 |         } else
      |         ^
./samples/SAFE/__tmp_7280873c.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7280873c.c:173:9: error: expected declaration or statement at end of input
